--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.12.4",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
     "@mui/x-date-pickers-pro": "^7.23.3",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
