move from MUI to Shadcn, fix search route and alias

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,13 +21,15 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
+    "baseUrl": ".",
     "paths": {
-      "@components/*": ["./src/components/*"],
-      "@lib/*": ["./src/lib/*"],
-      "@assets/*": ["./src/assets/*"],
-      "@utils/*": ["./src/utils/*"],
-      "@store/*": ["./src/store/*"],
-      "@hook/*": ["./src/hook/*"] 
+      // "@components/*": ["./src/components/*"],
+      // "@lib/*": ["./src/lib/*"],
+      // "@assets/*": ["./src/assets/*"],
+      // "@utils/*": ["./src/utils/*"],
+      // "@store/*": ["./src/store/*"],
+      // "@hook/*": ["./src/hook/*"] 
+      "@/*": ["./src/*"]  
     }
   },
   "include": ["./src/**/*"]
