--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
