--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
+    "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
